fix: testing wrapping

--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Inter:wght@100;200;300;400;500;600&display=swap');
 body {
     margin: 0 auto;
-    width: 55%;
+    max-width: 700px;
+
 
 }
 
